--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<h1> our contact no are </h1>
+<h1> our contact no and mail </h1>
 <h2> contact no: 123456789 </h1>
 <h3> mail id: 1234@gmail.com </h2>
+
 
